# InterpreteurC

./: .gitignore  CMakeLists.txt  LICENSE  README.md  instructions.txt  main.c
src/c_files/: ast.c  file.c  lexer.c  log.c  manage_list.c  parser.c  shunting-yard.c  stringUtils.c  test.c
src/includes_h/: ast.h  file.h  global.h  lexer.h  log.h  manage_list.h  parser.h  shunting-yard.h  stringUtils.h  structs.h  test.h
